Update Block Flags1
Flag 0x0002 is set if Toggle Opacity is set for floor.

--- a/trproject.htm
+++ b/trproject.htm
@@ -2694,7 +2694,7 @@ is on the North side of the block and faces to the North. As for the section num
   
   <p class=Normal>BLOCK_F1_FALL<u>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;0x0002</u></p>
   
-  <p class=Normal>&nbsp;  Not exactly sure. It is only set if the block is part of a floor door, and you are able to fall thru to the room below. One more thing I have to figure out.</p>
+  <p class=Normal>&nbsp; This flag is turned on if Toggle Opacity is set for floor.</p>
   
   <p class=Normal>&nbsp;</p>
   
